--- a/desafio-login-user/package.json
+++ b/desafio-login-user/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "desafio-login-user",
+  "name": "login-categories",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "history": "^4.10.1",
+    "phosphor-react": "^1.4.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.5.0",
+    "react-confirm-alert": "^2.8.0",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^5.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.0.1",
-    "vite": "^3.0.7"
+    "@vitejs/plugin-react": "^2.0.0",
+    "vite": "^3.0.0"
   }
 }
